# bplot

./: .gitignore  README.md  build_dist.py  build_doc.py  meta.yaml  project.toml  pyproject.toml  setup.py
bplot/: __init__.py  display.py  hist1d.py  plot1d.py  plot2d.py  scatter1d.py  show.py  test.py
bplot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
docs/: bplot.html  index.html  search.js
docs/bplot/: display.html  hist1d.html  plot1d.html  plot2d.html  scatter1d.html  show.html  test.html
docs_assets/: module.html.jinja2
